--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,6 +6,8 @@
   <div class="welcome-message">
     <h1>Bienvenido</h1>
     <p>SkeletonApp</p>
+    <p> </p>
+
   </div>
 
   <div class="login-buttons">
@@ -20,9 +22,11 @@
   
   
     <div class="social-icons">
-    <ion-icon name="logo-ionic" class="icon"></ion-icon>
+    
     <ion-icon name="logo-apple" class="icon"></ion-icon>
     <ion-icon name="logo-android" class="icon"></ion-icon>
+    <ion-icon name="skull-outline" class="icon"></ion-icon>
+
 
   </div>
 </ion-content>
