--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -5,13 +5,13 @@
   justify-content: center;
   height: 100vh;
   padding: 20px;
-  background-color: #f0f4f8;
+  background-color: #f4f0f8;
 }
 
 .header {
   width: 100%;
   height: 30%;
-  background-color: #1e3a8a;
+  background-color: #491e8a;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -21,7 +21,7 @@
 .triangle {
   width: 100%;
   height: 50%;
-  background: linear-gradient(to right top, #1e3a8a, #3b82f6);
+  background: linear-gradient(to right top, #8a1e52, #3b95f6);
   clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
 
@@ -62,13 +62,13 @@
 }
 
 .forgot-password a {
-  color: #1e3a8a;
+  color: #641e8a;
   text-decoration: underline;
 }
 
 .social-login {
   font-size: 14px;
-  color: #6b7280;
+  color: #776b80;
   margin-top: 15px;
 }
 
@@ -81,5 +81,5 @@
 
 .icon {
   font-size: 25px;
-  color: #1e3a8a;
+  color: #6b1e8a;
 }
