--- a/src/app/carrito/carrito.page.html
+++ b/src/app/carrito/carrito.page.html
@@ -41,4 +41,4 @@
   <ion-item>
     <ion-label><strong>Total: {{ total | currency }}</strong></ion-label>
   </ion-item>
-</ion-content>
+  <ion-button expand="block">Pagar</ion-button>
