--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,12 +5,12 @@
 
   <div class="welcome-message">
     <h1>Bienvenido</h1>
-    <p>SkeletonApp</p>
+    <p>Home & Tools</p>
   </div>
 
   <div class="login-buttons">
     <ion-button expand="block" color="primary" class="login-btn" (click)="navigateToMenu()">Ingresa</ion-button>
-    <ion-button expand="block" color="light" class="signup-btn">Registrate</ion-button>
+    <ion-button expand="block" color="light" class="signup-btn" (click)="navigateToRegistro()">Registrate</ion-button>
   </div>
 
   <p class="forgot-password">
